Bug 204934. Fix accessibility crashes. r=kyle, sr=alecf, a=asa